--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "history-router-handler",
+  "description": "History API for router",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
