feat: update README.md

--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "history-router-handler",
   "description": "History API for router",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "devDependencies": {
+    "vite": "^2.7.10",
+    "nprogress": "^0.2.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "vite": "^2.7.10"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pdsuwwz/history-router-handler.git"
   },
-  "dependencies": {
-    "nprogress": "^0.2.0"
-  }
+  "keywords": [],
+  "author": "Wisdom",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/pdsuwwz/history-router-handler/issues"
+  },
+  "homepage": "https://github.com/pdsuwwz/history-router-handler#readme"
 }
