--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "History API for router",
   "version": "1.0.0",
   "devDependencies": {
-    "vite": "^2.7.10",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "vite": "^2.7.13"
   },
   "scripts": {
     "dev": "vite",
